--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="d-flex flex-column">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container">
 			<a class="navbar-brand" href="#">Styx's Memory game</a>
